# td-change-monitor

./: .env.example  .gitignore  AGENTS.md  CODEX_PROMPT.md  Makefile  README.md  pyproject.toml
.github/workflows/: td_change_monitor.yml
config/: resource_targets.example.yml  resource_targets.yml  target_tables.example.yml
docs/: ACCEPTANCE_CRITERIA.md  API_NOTES.md  BEGINNER_SYSTEM_GUIDE.md  OPEN_ITEMS.md  SPEC.md
saved_queries/current/: 2368124.json  2609117.json  2626484.json  2657563.json  2671998.json  2672021.json  2672261.json  2701733.json  2707099.json  2726730.json  2726778.json  2727904.json  2729951.json  2738607.json  2740059.json  2743677.json  2743766.json  2745318.json  2752789.json  2779077.json  2779270.json  2782005.json  2785333.json  2797105.json  2797307.json  2801107.json  2843291.json  2858134.json  2859311.json  2859348.json  2859364.json  2859554.json  2859558.json  2865823.json
scripts/: check_storage.ps1  cleanup_logs.ps1  install_scheduled_task.ps1  install_wsl_for_dev.ps1  run_dry_run.ps1  run_dry_run.sh  run_td_change_monitor.ps1  run_td_change_monitor.sh  uninstall_scheduled_task.ps1  verify.sh
src/td_change_monitor/: __init__.py  audit.py  change_id.py  config.py  (+15 more)
state/: state.json
tests/: conftest.py  test_audit.py  test_change_id.py  test_clients.py  test_config.py  test_diff.py  test_local_git.py  test_rendering.py  test_resource_monitor.py  test_saved_query_diff.py  test_scripts.py  test_service.py  test_target_import.py  test_time_window.py  test_workflow_archive.py  test_workflow_diff.py  test_workflow_schedule.py
(+1792 files in other folders)
