[project]
name = "td-change-monitor"
version = "0.1.0"
description = "Treasure Data schema change monitor for Windows Task Scheduler"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "httpx>=0.27,<1",
  "openpyxl>=3.1,<4",
  "pydantic>=2.8,<3",
  "pydantic-settings>=2.4,<3",
  "PyYAML>=6,<7",
  "tenacity>=8.5,<10",
]

[project.scripts]
td-change-monitor = "td_change_monitor.main:cli"

[dependency-groups]
dev = [
  "mypy>=1.11,<2",
  "pytest>=8.3,<9",
  "pytest-cov>=5,<7",
  "respx>=0.21,<1",
  "ruff>=0.6,<1",
  "types-PyYAML>=6.0.12",
  "types-openpyxl>=3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/td_change_monitor"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["td_change_monitor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=td_change_monitor --cov-report=term-missing -p no:cacheprovider --basetemp=.test-tmp"
